# opengl_exp

./: CMakeLists.txt  readme.md
include/glad/: glad.h
src/: Shader.cpp  Shader.h  glad.c  main.cpp  shader.frag  shader.vert
